$Id: CHANGES,v 1.69 2008/01/24 10:03:17 psavola Exp $

24/01/2008	Implement privilege separation (Linux only) so that
		config_interface() works both with a user and root,
		even after HUP signal.  Work by Jim Paris.

21/01/2008	Fix stderr+syslog logging crash (on non-i386).  Analysis and
		patch by Jim Paris (Debian bug #409600).

01/12/2007	Require that interface is also 'RUNNING' instead of just
		'UP', except if IgnoreIfMissing is enabled.  The reason is
		that at least some recent Linux kernels do not generate
		link-local addresses before interface is running and as
		a result, the startup may fail if network cable is unplugged
		in any case.

		Note: this could break deployments with some very old 
                kernels, see more info at:

		http://lists.litech.org/pipermail/radvd-devel-l/2007-October/000280.html

25/10/2007	Implement automatically selecting and advertising an
                interface address, see radvd.conf(5) for more.  Add
		a warning about not being able to set interface
		variables with non-root user.  Relax interface naming
                a bit.

25/06/2007	Send prefix, route and RDNSS options (matters if there
		are many RDNSS options) in the same order they appear
		in the configuration; add support for AdvDefaultLifetime
		in radvdump (patches from C. Scott Ananian)

11/01/2006	Release 1.0.

10/09/2006	Perform a static/dynamic code audit; plug some minor
		bugs (see CVS changelogs for more information) and
		perform minor clean-up.

08/07/2006	Implement MAX_INITIAL_RTR_ADVERT_INTERVAL handling,
		patch from Yoshifuji Hideaki / USAGI.

05/23/2006	Unblock SIGALRM signals at startup.  Some scripts/programs
		seem to run radvd from ALRM-blocked context which breaks
		the timers.

05/23/2006	Redefined IgnoreIfMissing: by default, radvd will now
		try to reinitialize failed interfaces automatically.
		IgnoreIfMissing is still needed if radvd is started when the
		interface isn't up, and it also quenches some messages